--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -12,48 +12,48 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="../watch-list/index.html">Watch list</a></li>
         <li><a href="../watching/index.html">Watching</a></li>
-        <li><a class="active" href="index.html">On hold</a></li>
+        <li><a href="../on-hold/index.html">On hold</a></li>
         <li><a href="../finished/index.html">Finished</a></li>
         <li><a href="../dropped/index.html">Dropped</a></li>
-        <li><a href="../recommendations/index.html">Recommendations</a></li>
+        <li><a class="active" href="index.html">Recommendations</a></li>
       </ul>
     </div>
     <div class="container">
       <div class="row">
         <div class="panel">
           <img src="images/1.jpg" alt="">
-          <p>Baki</p>
+          <p>Rising of the shield hero</p>
         </div>
         <div class="panel">
           <img src="images/2.jpg" alt="">
-          <p>Date a live 3</p>
+          <p>Angel beats!</p>
         </div>
         <div class="panel">
           <img src="images/3.jpg" alt="">
-          <p>Mitsubishi colors</p>
+          <p>Hunter x hunter</p>
         </div>
         <div class="panel">
           <img src="images/4.jpg" alt="">
-          <p>Recovery of an MMO junkie</p>
+          <p>Overlord</p>
         </div>
       </div>
 
       <div class="row">
         <div class="panel">
           <img src="images/5.jpg" alt="">
-          <p>A certain magical index</p>
+          <p>Charlotte</p>
         </div>
         <div class="panel">
           <img src="images/6.jpg" alt="">
-          <p>A certain scientific railgun</p>
+          <p>No game no life</p>
         </div>
         <div class="panel">
           <img src="images/7.jpg" alt="">
-          <p>Akiba's trip</p>
+          <p>One punch man</p>
         </div>
         <div class="panel">
           <img src="images/8.jpg" alt="">
-          <p>Black lagoon</p>
+          <p>Fairy tail</p>
         </div>
       </div>
     </div>
