--- a/dropped/index.html
+++ b/dropped/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../all.css">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <title></title>
   </head>
@@ -13,8 +13,8 @@
         <li><a href="../watch-list/index.html">Watch list</a></li>
         <li><a href="../watching/index.html">Watching</a></li>
         <li><a href="../on-hold/index.html">On hold</a></li>
-        <li><a class="active" href="index.html">Finished</a></li>
-        <li><a href="../dropped/index.html">Dropped</a></li>
+        <li><a href="../finished/index.html">Finished</a></li>
+        <li><a class="active" href="index.html">Dropped</a></li>
         <li><a href="../recommendations/index.html">Recommendations</a></li>
       </ul>
     </div>
@@ -26,34 +26,34 @@
         </div>
         <div class="panel">
           <img src="images/2.jpg" alt="">
-          <p>Hunter x hunter</p>
+          <p>Ajin: Demi-human</p>
         </div>
         <div class="panel">
           <img src="images/3.jpg" alt="">
-          <p>Overlord</p>
+          <p>Aria the scarlet ammo</p>
         </div>
         <div class="panel">
           <img src="images/4.jpg" alt="">
-          <p>Mob psycho 100</p>
+          <p>Assassination classroom 2nd season</p>
         </div>
       </div>
 
       <div class="row">
         <div class="panel">
           <img src="images/5.jpg" alt="">
-          <p>No game no life</p>
+          <p>Bakemonogatari</p>
         </div>
         <div class="panel">
           <img src="images/6.jpg" alt="">
-          <p>Charlotte</p>
+          <p>Beelzebub</p>
         </div>
         <div class="panel">
           <img src="images/7.jpg" alt="">
-          <p>Sora no otoshimono</p>
+          <p>Blue exorcist</p>
         </div>
         <div class="panel">
           <img src="images/8.jpg" alt="">
-          <p>One punch man</p>
+          <p>Cells at work!</p>
         </div>
       </div>
     </div>
