--- a/finished/index.html
+++ b/finished/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../all.css">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <title></title>
   </head>
