--- a/on-hold/index.html
+++ b/on-hold/index.html
@@ -21,38 +21,38 @@
     <div class="container">
       <div class="row">
         <div class="panel">
-          <img src="images/1.jpg" alt="">
+          <a href="https://myanimelist.net/anime/34443/Baki?q=baki" target="_blank"><img src="images/1.jpg" alt=""></a>
           <p>Baki</p>
         </div>
         <div class="panel">
-          <img src="images/2.jpg" alt="">
+          <a href="https://myanimelist.net/anime/36633/Date_A_Live_III?q=date%20a%20live%203" target="_blank"><img src="images/2.jpg" alt=""></a>
           <p>Date a live 3</p>
         </div>
         <div class="panel">
-          <img src="images/3.jpg" alt="">
+          <a href="https://myanimelist.net/anime/35078/Mitsuboshi_Colors?q=mitsubishi" target="_blank"><img src="images/3.jpg" alt=""></a>
           <p>Mitsubishi colors</p>
         </div>
         <div class="panel">
-          <img src="images/4.jpg" alt="">
+          <a href="https://myanimelist.net/anime/36038/Net-juu_no_Susume?q=recovery" target="_blank"><img src="images/4.jpg" alt=""></a>
           <p>Recovery of an MMO junkie</p>
         </div>
       </div>
 
       <div class="row">
         <div class="panel">
-          <img src="images/5.jpg" alt="">
+          <a href="https://myanimelist.net/anime/4654/Toaru_Majutsu_no_Index?q=a%20certain%20magical" target="_blank"><img src="images/5.jpg" alt=""></a>
           <p>A certain magical index</p>
         </div>
         <div class="panel">
-          <img src="images/6.jpg" alt="">
+          <a href="https://myanimelist.net/anime/6213/Toaru_Kagaku_no_Railgun?q=a%20certain%20scientific" target="_blank"><img src="images/6.jpg" alt=""></a>
           <p>A certain scientific railgun</p>
         </div>
         <div class="panel">
-          <img src="images/7.jpg" alt="">
+          <a href="https://myanimelist.net/anime/34051/Akibas_Trip_The_Animation?q=akiba%27s%20tr" target="_blank"><img src="images/7.jpg" alt=""></a>
           <p>Akiba's trip</p>
         </div>
         <div class="panel">
-          <img src="images/8.jpg" alt="">
+          <a href="https://myanimelist.net/anime/889/Black_Lagoon?q=black%20lagoon" target="_blank"><img src="images/8.jpg" alt=""></a>
           <p>Black lagoon</p>
         </div>
       </div>
