--- a/watching/index.html
+++ b/watching/index.html
@@ -21,38 +21,38 @@
     <div class="container">
       <div class="row">
         <div class="panel">
-          <img src="images/1.jpg" alt="">
+          <a href="https://myanimelist.net/anime/37520/Dororo?q=dororo" target="_blank"><img src="images/1.jpg" alt=""></a>
           <p>Dororo</p>
         </div>
         <div class="panel">
-          <img src="images/2.jpg" alt="">
+          <a href="https://myanimelist.net/anime/35790/Tate_no_Yuusha_no_Nariagari?q=rising%20of" target="_blank"><img src="images/2.jpg" alt=""></a>
           <p>Rising of the shield hero</p>
         </div>
         <div class="panel">
-          <img src="images/3.jpg" alt="">
+          <a href="https://myanimelist.net/anime/34134/One_Punch_Man_2nd_Season?q=one%20punch" target="_blank"><img src="images/3.jpg" alt=""></a>
           <p>One punch man 2nd season</p>
         </div>
         <div class="panel">
-          <img src="images/4.jpg" alt="">
+          <a href="https://myanimelist.net/anime/38472/Isekai_Quartet?q=isekai%20qua" target="_blank"><img src="images/4.jpg" alt=""></a>
           <p>Isekai Quartet</p>
         </div>
       </div>
 
       <div class="row">
         <div class="panel">
-          <img src="images/5.jpg" alt="">
+          <a href="https://myanimelist.net/anime/34572/Black_Clover?q=black%20clo" target="_blank"><img src="images/5.jpg" alt=""></a>
           <p>Black clover</p>
         </div>
         <div class="panel">
-          <img src="images/6.jpg" alt="">
+          <a href="https://myanimelist.net/anime/14719/JoJo_no_Kimyou_na_Bouken_TV?q=jojo%27s%20bizarre%20adventure" target="_blank"><img src="images/6.jpg" alt=""></a>
           <p>Jojo's bizarre adventure</p>
         </div>
         <div class="panel">
-          <img src="images/7.jpg" alt="">
+          <a href="https://myanimelist.net/anime/35972/Fairy_Tail__Final_Series?q=fairy%20tail%20final" target="_blank"><img src="images/7.jpg" alt=""></a>
           <p>Fairy tail final series</p>
         </div>
         <div class="panel">
-          <img src="images/8.jpg" alt="">
+          <a href="https://myanimelist.net/anime/37349/Goblin_Slayer?q=goblin" target="_blank"><img src="images/8.jpg" alt=""></a>
           <p>Goblin slayer</p>
         </div>
       </div>
