--- a/finished/index.html
+++ b/finished/index.html
@@ -21,38 +21,38 @@
     <div class="container">
       <div class="row">
         <div class="panel">
-          <img src="images/1.jpg" alt="">
+          <a href="https://myanimelist.net/anime/6547/Angel_Beats?q=angel%20" target="_blank"><img src="images/1.jpg" alt=""></a>
           <p>Angel beats!</p>
         </div>
         <div class="panel">
-          <img src="images/2.jpg" alt="">
+          <a href="https://myanimelist.net/anime/11061/Hunter_x_Hunter_2011?q=hunter" target="_blank"><img src="images/2.jpg" alt=""></a>
           <p>Hunter x hunter</p>
         </div>
         <div class="panel">
-          <img src="images/3.jpg" alt="">
+          <a href="https://myanimelist.net/anime/29803/Overlord?q=overlord" target="_blank"><img src="images/3.jpg" alt=""></a>
           <p>Overlord</p>
         </div>
         <div class="panel">
-          <img src="images/4.jpg" alt="">
+          <a href="https://myanimelist.net/anime/32182/Mob_Psycho_100?q=mob%20psych" target="_blank"><img src="images/4.jpg" alt=""></a>
           <p>Mob psycho 100</p>
         </div>
       </div>
 
       <div class="row">
         <div class="panel">
-          <img src="images/5.jpg" alt="">
+          <a href="https://myanimelist.net/anime/19815/No_Game_No_Life?q=no%20game%20no" target="_blank"><img src="images/5.jpg" alt=""></a>
           <p>No game no life</p>
         </div>
         <div class="panel">
-          <img src="images/6.jpg" alt="">
+          <a href="https://myanimelist.net/anime/28999/Charlotte?q=charlotte" target="_blank"><img src="images/6.jpg" alt=""></a>
           <p>Charlotte</p>
         </div>
         <div class="panel">
-          <img src="images/7.jpg" alt="">
+          <a href="https://myanimelist.net/anime/5958/Sora_no_Otoshimono?q=sora%20no%20otos" target="_blank"><img src="images/7.jpg" alt=""></a>
           <p>Sora no otoshimono</p>
         </div>
         <div class="panel">
-          <img src="images/8.jpg" alt="">
+          <a href="https://myanimelist.net/anime/30276/One_Punch_Man?q=one%20punch" target="_blank"><img src="images/8.jpg" alt=""></a>
           <p>One punch man</p>
         </div>
       </div>
