--- a/dropped/index.html
+++ b/dropped/index.html
@@ -21,38 +21,38 @@
     <div class="container">
       <div class="row">
         <div class="panel">
-          <img src="images/1.jpg" alt="">
+          <a href="https://myanimelist.net/anime/11285/Black%E2%98%85Rock_Shooter_TV?q=black%20rock" target="_blank"><img src="images/1.jpg" alt=""></a>
           <p>Black rock shooter</p>
         </div>
         <div class="panel">
-          <img src="images/2.jpg" alt="">
+          <a href="https://myanimelist.net/anime/31580/Ajin?q=ajin" target="_blank"><img src="images/2.jpg" alt=""></a>
           <p>Ajin: Demi-human</p>
         </div>
         <div class="panel">
-          <img src="images/3.jpg" alt="">
+          <a href="https://myanimelist.net/anime/10604/Hidan_no_Aria__Butei_ga_Kitarite_Onsen_Kenshuu?q=aria%20the%20sc" target="_blank"><img src="images/3.jpg" alt=""></a>
           <p>Aria the scarlet ammo</p>
         </div>
         <div class="panel">
-          <img src="images/4.jpg" alt="">
+          <a href="https://myanimelist.net/anime/30654/Ansatsu_Kyoushitsu_2nd_Season?q=assassination" target="_blank"><img src="images/4.jpg" alt=""></a>
           <p>Assassination classroom 2nd season</p>
         </div>
       </div>
 
       <div class="row">
         <div class="panel">
-          <img src="images/5.jpg" alt="">
+          <a href="https://myanimelist.net/anime/5081/Bakemonogatari?q=bakemon" target="_blank"><img src="images/5.jpg" alt=""></a>
           <p>Bakemonogatari</p>
         </div>
         <div class="panel">
-          <img src="images/6.jpg" alt="">
+          <a href="https://myanimelist.net/anime/9513/Beelzebub?q=beelze" target="_blank"><img src="images/6.jpg" alt=""></a>
           <p>Beelzebub</p>
         </div>
         <div class="panel">
-          <img src="images/7.jpg" alt="">
+          <a href="https://myanimelist.net/anime/33506/Ao_no_Exorcist__Kyoto_Fujouou-hen?q=blue%20ex" target="_blank"><img src="images/7.jpg" alt=""></a>
           <p>Blue exorcist</p>
         </div>
         <div class="panel">
-          <img src="images/8.jpg" alt="">
+          <a href="https://myanimelist.net/anime/37141/Hataraku_Saibou?q=cells%20at" target="_blank"><img src="images/8.jpg" alt=""></a>
           <p>Cells at work!</p>
         </div>
       </div>
