--- a/dropped/index.html
+++ b/dropped/index.html
@@ -56,6 +56,27 @@
           <p>Cells at work!</p>
         </div>
       </div>
+
+      <div class="row">
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/35241/Konohana_Kitan?q=konohaN" target="_blank"><img src="images/9.jpg" alt=""></a>
+          <p>Konohana kitan</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/34403/Hajimete_no_Gal?q=my%20first%20girlfri" target="_blank"><img src="images/10.jpg" alt=""></a>
+          <p>My first girlfriend is a gal</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/35062/Mahoutsukai_no_Yome?q=the%20ancient" target="_blank"><img src="images/11.jpg" alt=""></a>
+          <p>The ancient magus' bride</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/34177/Tenshi_no_3P?q=angel%27s%203%20" target="_blank"><img src="images/12.jpg" alt=""></a>
+          <p>Angel's 3piece!</p>
+        </div>
+      </div>
+
+
     </div>
 
   </body>
