--- a/finished/index.html
+++ b/finished/index.html
@@ -56,6 +56,26 @@
           <p>One punch man</p>
         </div>
       </div>
+
+      <div class="row">
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/34881/Aho_Girl?q=aho%20girl" target="_blank"><img src="images/9.jpg" alt=""></a>
+          <p>Aho-girl</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/22199/Akame_ga_Kill?q=akame%20ga" target="_blank"><img src="images/10.jpg" alt=""></a>
+          <p>Akame ga kill!</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/31478/Bungou_Stray_Dogs?q=bungou%20s" target="_blank"><img src="images/11.jpg" alt=""></a>
+          <p>Bungou stray dogs</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/35507/Youkoso_Jitsuryoku_Shijou_Shugi_no_Kyoushitsu_e?q=classroom%20of%20the" target="_blank"><img src="images/12.jpg" alt=""></a>
+          <p>Classroom of the elite</p>
+        </div>
+      </div>
+
     </div>
 
   </body>
