--- a/on-hold/index.html
+++ b/on-hold/index.html
@@ -56,6 +56,27 @@
           <p>Black lagoon</p>
         </div>
       </div>
+
+      <div class="row">
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/34618/Blend_S?q=blend%20s" target="_blank"><img src="images/9.jpg" alt=""></a>
+          <p>Blend S</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/32867/Bungou_Stray_Dogs_2nd_Season?q=bungo%20stray" target="_blank"><img src="images/10.jpg" alt=""></a>
+          <p>Bungo stray dogs 2nd season</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/813/Dragon_Ball_Z?q=dragon%20ball%20z" target="_blank"><img src="images/11.jpg" alt=""></a>
+          <p>Dragon ball Z</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/31043/Boku_dake_ga_Inai_Machi?q=erased" target="_blank"><img src="images/12.jpg" alt=""></a>
+          <p>Erased</p>
+        </div>
+      </div>
+
+
     </div>
 
   </body>
