--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -56,6 +56,27 @@
           <p>Fairy tail</p>
         </div>
       </div>
+
+      <div class="row">
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/31339/Drifters?q=drifters" target="_blank"><img src="images/9.jpg" alt=""></a>
+          <p>Drifters</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/14813/Yahari_Ore_no_Seishun_Love_Comedy_wa_Machigatteiru?q=snafu" target="_blank"><img src="images/10.jpg" alt=""></a>
+          <p>My teen romantic comedy SNAFU</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/32887/Dungeon_ni_Deai_wo_Motomeru_no_wa_Machigatteiru_Darou_ka_Gaiden__Sword_Oratoria?q=danmachi" target="_blank"><img src="images/11.jpg" alt=""></a>
+          <p>Danmachi</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/33206/Kobayashi-san_Chi_no_Maid_Dragon?q=miss%20kobayashi" target="_blank"><img src="images/12.jpg" alt=""></a>
+          <p>Miss kobayashi's dragon maid</p>
+        </div>
+      </div>
+
+
     </div>
 
   </body>
