--- a/watching/index.html
+++ b/watching/index.html
@@ -56,6 +56,26 @@
           <p>Goblin slayer</p>
         </div>
       </div>
+
+      <div class="row">
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/37171/Asobi_Asobase?q=asobi%20aso" target="_blank"><img src="images/9.jpg" alt=""></a>
+          <p>Asobi asobase</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/37430/Tensei_shitara_Slime_Datta_Ken?q=that%20time%20i" target="_blank"><img src="images/10.jpg" alt=""></a>
+          <p>That time i got reincarnated as a slime</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/31629/Granblue_Fantasy_The_Animation?q=granblue%20the" target="_blank"><img src="images/11.jpg" alt=""></a>
+          <p>Granblue fantasy the animation</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/2001/Tengen_Toppa_Gurren_Lagann?q=gurenn%20lagann" target="_blank"><img src="images/12.jpg" alt=""></a>
+          <p>Gurren lagann</p>
+        </div>
+      </div>
+
     </div>
 
   </body>
