--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </ul>
     </div>
     <div class="container">
+      <div class="row"><br></div>
       <div class="slide">
         <div class="slideshow-container">
 
