--- a/watching/index.html
+++ b/watching/index.html
@@ -76,6 +76,22 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="panel">
+          <a href="https://myanimelist.net/manga/103890/Bokutachi_wa_Benkyou_ga_Dekinai?q=bokuben" target="_blank"><img src="images/13.jpg" alt=""></a>
+          <p>Bokuben</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/38000/Kimetsu_no_Yaiba" target="_blank"><img src="images/14.jpg" alt=""></a>
+          <p>Kimetsu no Yaiba</p>
+        </div>
+        <div class="panel">
+          <a href="https://myanimelist.net/anime/37993/Watashi_ni_Tenshi_ga_Maiorita?q=wataten" target="_blank"><img src="images/15.jpg" alt=""></a>
+          <p>WATATEN! An angel flew down on me</p>
+        </div>
+      </div>
+
+
     </div>
 
   </body>
